# vscpl2drv-logger

./: .gitignore  .gitmodules  CHANGELOG  CMakeLists.txt  Makefile.in  README.md  build-unix.sh  build-windows.bat  build_debian_package.sh  config.h.in  configure  configure.ac  update_common_files.sh
.github/: FUNDING.yml
.github/workflows/: build.yml  cmake.yml  cmake_cross_platform_build.yml
cmake/: version.h.in
common/: dlldrvobj.cpp  dlldrvobj.h  log.cpp  log.h
debian_orig/: README.source  changelog  control  links  manpages  rules
debug/: conf_standard.json  conf_standard.xml
debug/linux/: v2logger.json  vscpd.json  vscpd.xml  vscpl2drv-logger.json
docs/: README.md  _coverpage.md  _sidebar.md  build.md  configure.md  history.md  hlo.md  index.html  install.md  links.md  using.md  variables.xml
docs/examples/: inet_example.cpp
docs/images/: vscpl2drv-logger.xmind  vscpl2drv-websocksrv.xmind
forms/: index.html
forms/js/: crypto.js  settings.js  testcrypto.html  vscp.js  vscp_class.js  vscp_type.js
linux/: Makefile  Makefile.in  test  test.cpp  vscpl2drv-logger.cpp  vscpl2drv-logger.h
man/: CMakeLists.txt  make_man_pages  vscpl1drv-logger.7.md  vscpl2drv-logger.1  vscpl2drv-logger.1.md
resources/debpkg/: README.Debian  changelog  control  copyright  folders  install  rules  shlibs
resources/linux/: v2logger.json
src/: .gitignore  Makefile.in  StdAfx.h  test.cpp  version.h  vscpl2drv-logger.cpp  vscpl2drv-logger.h
src/nbproject/: configurations.xml  project.xml
src/nbproject/private/: Default.properties  configurations.xml
testapp/: README.md  main.cpp
